# BetheHeitler1

./: .BH.0039.dat.swp  .gitignore  AutoDict_vector_Paddle_.cxx  AutoDict_vector_Paddle__cxx.d  BH.0000.root  BH.0033.root  BH.0034.root  BHdata.root  BetheHeitler  BetheHeitler.cc  CMakeCache.txt  CMakeLists.txt  G4History.macro  Makefile  README  TTree_Gen.C  TTree_Gen_C.d  cmake_install.cmake  currentEvent.rndm  currentRun.rndm  gui.mac  run_Haoyu.mac  run_beamon.mac  run_beamon_5000.mac  run_gamma.mac  run_gamma_ideal.mac  run_input.mac  run_input_all.mac  run_input_all_ideal.mac  run_input_fit.mac  run_pair.mac  tree_gen.C  tree_gen3_C.d  tree_gen_C.d  vis.mac
Macfiles/: run_gamma_ideal.mac  run_input_Uranium.mac  run_test.mac
RootScipt/: Ee-Ep.C  Ee-EpTest_C.d  Ee-EpV1_C.d  PlotNew.C  PlotNew_C.d  TpTeSym.C  TpTeSym3D.C  TpTeSym3D_C.d  TpTeSym_C.d
RootScript/: Ee-Ep.C  Ee-EpTest.C  Ee-EpUnused.C  Ee-EpV1.C  Ee-Ep_C.d  Epsilon_Gen.C  Epsilon_Gen_C.d  test.h  tree_gen.C
RootScript/Ee-Ep/: Ee-Ep.C  PlotNew.C
RootScript/Ee-EpKE/: Ee-EpKE.C  PlotNew.C
RootScript/Ee-EpKEToFCh/: Ee-EpKEToFCh.C  PlotVDCKE.C  T.h
RootScript/Ee-EpPair/: Ee-EpPair.C  PlotNew.C
RootScript/Ee-EpVDCWires/: Ee-EpKEToFCh.C  T.C  WH.C  WH.h  WH1.C  WH2.C  (+1 more)
TreeGen/: tree_gen3.C
fitting/: BH_Monitor_Pair.agr  BH_Monitor_Pair_asymmetry.agr  BH_Pair.agr  BH_Pair_assymetry.agr  BH_Pair_asymmetry.agr  BH_Pair_opening_angle.agr  Energy_Difference.agr  Energy_Difference_0.agr  Energy_Difference_both.agr  Pair_energy.agr  Phi_Difference.agr  Phi_Difference_both.agr  Polar_Difference_Monitor_both.agr  Polar_Difference_both.agr  Theta_Difference.agr  Theta_Difference_both.agr  check_energy.pl  check_monitor_polar.pl  check_phi.pl  check_polar.pl  check_theta.pl  fit_energy.pl  fit_phi.pl  fit_theta.pl  monitor.pl  pair.pl
include/: BH_LinkDef.h  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  GeneratorMessenger.hh  MagneticField.hh  MonitorHit.hh  MonitorSD.hh  OutputFile.hh  OutputFileMessenger.hh  PaddleHit.hh  PaddleSD.hh  PrimaryGeneratorAction.hh  RunAction.hh  WireChamberHit.hh  WireChamberSD.hh
src/: DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  GeneratorMessenger.cc  MagneticField.cc  MonitorHit.cc  MonitorSD.cc  OutputFile.cc  OutputFileMessenger.cc  PaddleHit.cc  PaddleSD.cc  PrimaryGeneratorAction.cc  RunAction.cc  WireChamberHit.cc  WireChamberSD.cc
(+18 files in other folders)
